--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,11 @@ body {
   justify-content: space-between;
 }
 
+.gap {
+  width: 16vw;
+  height: 16vw;
+}
+
 .avatar {
   position: relative;
   margin-bottom: 2vw;
