--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,14 @@ body {
   border-radius: 20%;
 }
 
+.avatar-content:active {
+  background-color: #BEE575;
+  top: 1vw;
+  left: 1vw;
+  right: 1vw;
+  bottom: 1vw;
+}
+
 .avatar-border {
   background-color: #BEE575;
   position: absolute;
