Данные для отладки

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #A5CBE7;
+  /*background-color: #A5CBE7;*/
+  background-color: #4BC429;
   overflow-y: auto;
   overflow-x: hidden;
 }
